update:swagger function note
